feat: implement pricing integration service